<resources>
    <string name="app_name">MyViewAndViews</string>

    <string name="content_text">Perjuangan BJ Habibie dari masa kecil hingga
        menjadi Presiden Indonesia ketiga dilaluinya dengan keras dan penuh dengan
        perjuangan yang panjang. Banyak Peran dan karya BJ Habibie bagi bangsa Indonesia
        khususnya dalam bidang kedirgantaraan. Berikut profil dan biografi BJ Habibie
        dari masa kecil hingga ia sukses hingga saat ini.
    </string>
    <string name="name">Prof. Dr.Ing. H. Bacharuddin Jusuf Habibie</string>
    <string name="TTL">Parepare, 25 Juni 1936</string>
    <string name="jabatan">Presiden ke-3\n
        Wakil Presiden ke-7\n
        Menteri Riset dan Teknologi Indonesia ke-4
    </string>
    <string name="penemuan">
        Crack Progression Theory\n
        Pesawat N-250\n
        Pesawat R80
    </string>
    <string name="donasi">Donasi Pesawat R80</string>
    <string name="ajakan">Sudah saatnya Indonesia punya pesawat sendiri,
        Salurkan donasi anda
    </string>
    <string name="pesawat_r80">Pesawat R80</string>
    <string name="presiden_ke_3_indonesia">Presiden Ke 3 Indonesia</string>
    <string name="nama">Nama</string>
    <string name="ttl">TTL</string>
    <string name="Jabatan">Jabatan</string>
    <string name="Penemuan">Penemuan</string>
    <string name="Donasi">Donasi</string>
    <string name="cd_banner_r80">Banner R80</string>
    <string name="hint_name">Nama Anda</string>
    <string name="hint_mail">Alamat Email</string>
    <string name="hint_donasi">Jumlah Donasi</string>
    <string name="hint_note">Catatan</string>
</resources>