<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:clipToPadding="false"
            android:padding="16dp"
            tools:context=".DonasiActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_logo_donate"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>

        <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_layout"
                android:background="@color/colorView"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hint_name"
                android:inputType="textEmailAddress"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hint_mail"
                android:inputType="textEmailAddress"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_donasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hint_donasi"
                android:inputType="number"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="top|left"
                android:hint="@string/hint_note"
                android:inputType="textMultiLine"
                android:lines="5"/>

        <androidx.appcompat.widget.AppCompatButton
                android:backgroundTint="@color/colorPrimary"
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/activity_vertical_layout"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="@dimen/activity_vertical_layout"
                android:text="@string/Donasi"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>